[package]
name = "snapchat-capi-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
wit-bindgen = "0.41.0"

[dev-dependencies]
cargo-llvm-cov = "0.6.15"
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
